--- a/style.css
+++ b/style.css
@@ -81,6 +81,50 @@ h2 {
   transform: translateX(5px);
 }
 
+.experience article {
+  background-color: #333;
+  padding: 20px;
+  margin-bottom: 20px;
+  border-left: 5px solid #ff6a00;
+  border-radius: 5px;
+}
+
+.experience h3 {
+  color: #ffffff;
+  font-size: 1.4em;
+  margin-top: 0;
+}
+
+.experience span {
+  display: block;
+  color: #ccc;
+  font-style: italic;
+  margin-bottom: 15px;
+}
+
+.experience article ul {
+  list-style-position: inside;
+  padding-left: 5px;
+}
+
+.experience article li {
+  background-color: transparent;
+  border: none;
+  font-size: 1em;
+  margin-bottom: 10px;
+  padding: 0;
+}
+
+.experience article p {
+  font-size: 1em;
+  line-height: 1.7;
+  margin-top: 10px;
+}
+
+.experience article p strong {
+  color: #ff8c42; /* Lighter orange for emphasis */
+}
+
 a {
   color: #ff6a00;
   text-decoration: none;
